Fix bug with 'Leaving' as departure time